# market_miner

./: .env.default  .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: db.rs  main.rs  models.rs  scraper.rs  utils.rs
src/api/: handlers.rs  mod.rs  response.rs  routes.rs  ws.rs
src/db/: connection.rs  mod.rs  queries.rs
src/models/: stock.rs
src/scraper/: job.rs  mod.rs  scraper.rs
src/utils/: config.rs  logging.rs
