[package]
name = "market_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.23.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
dotenvy = "0.15"
pretty_env_logger = "0.5.0"
log = "0.4.26"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4.0"

actix-web-actors = "4"
actix = "0.13"
redis = { version = "0.22", features = ["tokio-comp"] }
bb8 = "0.8" 
bb8-redis = "0.14"
